<resources>
	<string name="app_name">processbutton</string>
	<string name="title_activity_process_button">ProcessButtonActivity</string>

	<string name="hello_world">Hello world!</string>
	<string name="progress_mode">Progress mode</string>
	<string name="endless_mode">Endless mode</string>
	<string name="practice_mode">Practice mode</string>

	<string name="email">karenlin@kkbox.com</string>
	<string name="password">123456789</string>
	<string name="sign_in">Sign in</string>
	<string name="practice">Practice</string>
	<string name="success">Success</string>
	<string name="loading">Loading..</string>
	<string name="question">How are you?</string>
	<string name="send">Send</string>
	<string name="done">Done</string>
	<string name="upload">Upload</string>
	<string name="uploading">Uploading</string>
	<string name="loading_Complete">Loading Complete, button is disabled</string>
</resources>
