<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
				xmlns:tools="http://schemas.android.com/tools"
				xmlns:custom="http://schemas.android.com/apk/res-auto"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:paddingLeft="@dimen/activity_horizontal_margin"
				android:paddingRight="@dimen/activity_horizontal_margin"
				android:paddingTop="@dimen/activity_vertical_margin"
				android:paddingBottom="@dimen/activity_vertical_margin"
				tools:context="com.karen.processbutton.activity.ProcessButtonActivity">

	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_centerInParent="true"
			android:orientation="vertical">

		<EditText
				android:id="@+id/text_email"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="16dp"
				android:inputType="textEmailAddress"
				android:text="@string/email" />

		<EditText
				android:id="@+id/text_password"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="16dp"
				android:inputType="textPassword"
				android:text="@string/password" />

		<com.karen.processbutton.ActionProcessButton
				android:id="@+id/button_sign_in"
				android:layout_width="match_parent"
				android:layout_height="48dp"
				android:layout_marginBottom="16dp"
				android:text="@string/sign_in"
				android:textColor="@android:color/white"
				android:textSize="18sp"
				custom:pb_colorComplete="@color/green_complete"
				custom:pb_colorNormal="@color/blue_normal"
				custom:pb_colorPressed="@color/blue_pressed"
				custom:pb_colorProgress="@color/purple_progress"
				custom:pb_textComplete="@string/success"
				custom:pb_textProgress="@string/loading" />

	</LinearLayout>

</RelativeLayout>
